# agents_sync

./: .gitignore  LICENSE  README.md  audit_analysis.md  install-macos.sh  install.ps1  install.sh  pyproject.toml  pytest_new.ini  restart.md  uninstall.ps1
.githooks/: pre-push
archive/: restart_2026_06_01__13_31_58.md  restart_2026_06_11__13_46_22.md  restart_2026_06_15__14_55_41.md  restart_2026_06_15__20_39_02.md  restart_2026_06_16__14_29_40.md  restart_2026_06_20__03_27_06.md
docs/: agentic_frameworks_compatibility_analysis.md  agentic_frameworks_popularity.md  agentic_frameworks_user_data_library.md  agentic_tool_integration_protocol.md  architecture.md  architecture_implementation_plan.md  architecture_simplification_proposal.md  code_audit_V3.md  global_audit_2026_05_21.md  mcp_server_secret_policy_deprecation_cleanup_plan.md  opencode_integration_research.md  project_description.md  project_requirements.md  research_antigravity_2.0.md  size_xplosion_bug.md  v0.2.1_remediation_plan.md  v0.2_implementation_plan.md  v0.3_implementation_plan.md  v0.4.1_implementation_plan.md  v0.4.2_implementation_plan.md  v0.4.3_implementation_plan.md  v0.4_implementation_plan.md  v0.5.8_implementation_plan.md  v0.5_audit_remediation_plan.md  v0.5_copilot_implementation_plan.md  v0.5_cursor_implementation_plan.md  v0.5_gemini_cli_implementation_plan.md  v0.5_governance_proposals.md  v0.5_implementation_plan.md  v0.5_mcp_server_implementation_plan.md  v0.5_security_hardening_plan.md  v0.6_implementation_plan.md
scripts/: ci.sh  dev_setup.sh  integration_tests.sh  migrate_v0.4.py
tests/: _helpers.py  conftest.py  test_agentic_tool_spec.py  test_agentic_tool_status.py  test_antigravity_config.py  test_antigravity_io.py  test_antigravity_three_way.py  test_archive_canonical.py  test_archive_gc.py  test_archive_text_security.py  test_artifact_names.py  test_bulk_glitch_guard.py  test_canonical.py  test_canonical_change_detection.py  test_canonical_only_import.py  test_cli_export_import.py  test_cli_prune.py  test_codex_round_trip.py  test_config_platform_defaults.py  test_copilot_io.py  test_copilot_sync.py  test_crlf_digest_idempotency.py  test_cursor_io.py  test_cursor_sync.py  test_daemon_signals.py  test_discovery_enumerator.py  test_e2e_sync.py  test_exit_code_matrix.py  test_filesystem_retry_helper.py  test_first_boot_reconciliation.py  test_gemini_cli_config.py  test_gemini_cli_io.py  test_gemini_cli_sync.py  test_heal_from_canonical.py  test_import_archive_and_quarantine.py  test_import_while_daemon_active.py  test_install_macos_simulated.py  test_install_macos_text.py  test_install_ps1_text.py  test_macos_compat.py  (+41 more)
tests_new/: test_adopt_candidates.py  test_agentic_tools_registry.py  test_artifact_archive.py  test_artifact_identity.py  test_artifact_naming.py  test_atomic_file_writer.py  test_canonical_document.py  test_canonical_metadata.py  test_canonical_store.py  test_command_line_interface.py  test_compute_sync_plan.py  test_execute_sync_plan.py  test_global_rules.py  test_keyed_map_slot.py  test_markdown_frontmatter.py  test_mcp_codex_carriers.py  test_mcp_env_reference_style.py  test_mcp_opencode_dialect.py  test_mcp_render_spellings.py  test_mcp_server.py  test_mcp_transport_inference.py  test_observation.py  test_poll_daemon.py  test_portable_library.py  test_portable_library_import.py  test_portable_library_merge.py  test_read_tool_surfaces.py  test_reconcile_known.py  test_recover_identity.py  test_runtime_config.py  test_secret_policy.py  test_structured_text.py  test_sync_once.py  test_sync_plan.py  test_sync_state.py  test_sync_state_store.py  test_tool_default_locations.py  test_translation.py  (+3 more)
(+271 files in other folders)
