[project]
name = "agents_sync"
version = "0.4.3"
description = "Bidirectional sync of Claude Code, Codex, Antigravity, and opencode customizations."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "ruamel.yaml>=0.18",
]

[project.scripts]
agents-sync = "agents_sync.cli:main"

[dependency-groups]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_sync"]
