[project]
name = "agents_sync"
version = "0.4.3"
description = "Bidirectional sync of Claude Code, Codex, Cursor, Antigravity, and opencode customizations."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "ruamel.yaml>=0.18",
]

[project.scripts]
agents-sync = "agents_sync.cli:main"

[dependency-groups]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_sync"]

[tool.pytest.ini_options]
# Audit slice 10 · CQ-15: register slow / integration markers so a developer
# can opt out of the integration layer with ``pytest -m 'not integration'``
# for fast feedback during inner loops.
markers = [
  "slow: tests that take more than ~2s wall-clock; opt out with -m 'not slow'",
  "integration: tests that build a multi-tool Syncer over a tmp_path tree (the dominant cost in the suite); opt out with -m 'not integration'",
]
